Bug 1912115 - HTMLImageElement shouldn't be considered broken once a load task is ongoing. r=smaug

Clean-up some legacy nsImageLoadingContent state tracking while at it:

 * mLoading was not used to set ElementState anymore, and was only
   checked on the "loading" attribute handling, in what seems to be a
   poor man's way of preventing lazy loading to start once an image load
   is ongoing? However that should already be covered by the image load
   not being sync and checking mLazyLoad itself.

 * The depth tracking was unneeded, image notifications have been all
   async for ages.

Move some bools into nsImageLoadingContent to pack it better.

Differential Revision: https://phabricator.services.mozilla.com/D218971